test_regress/t/t_genvar_for_bad.out
%Error: t/t_genvar_for_bad.v:25:13: Genvar not legal in non-generate for (IEEE 1800-2023 27.4): 't.i'
                                  : ... Suggest move for loop upwards to generate-level scope.
   25 |             for (i=0; i<N; i=i+1) begin
      |             ^~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
